# conan-ccdc-index-tools

./: LICENSE.md  README.md  pytest.ini  setup.cfg
ccdc_conan_index_tools/: async_support.py  build_definition.py  conan_commands.py  logging.py  main.py  package_index.py
ccdc_conan_index_tools/commands/: build.py  info.py  publish.py
test/: test_async_support.py  test_build_definition_loading.py  test_cli.py  test_cli_info.py  test_cli_publish.py  test_index_loading.py
test/index_for_licence_checks/: index-defaults.yml
test/index_for_recipe_publication/: index-defaults.yml
test/index_for_recipe_publication/recipes/: 7zip.yml
test/recipe_loading/: additional-profiles.yml  build-types.yml  centos-yum-preinstall.yml  combinations-all.yml  combinations-limit-override.yml  combinations-limit.yml  combinations-override.yml  force-single-core-for-debug-builds.yml  git-config.yml  header-only.yml  index-defaults.yml  macos-brew-preinstall.yml  macos-dep-target.yml  require-override.yml  sample1.yml  use-release-zlib-profile.yml  workaround-autotools-windows-debug-issue.yml
test/recipe_loading/local-header-only-recipe-one-version/: config.yml
test/recipe_loading/local-needs-artifactory-api-key/: config.yml
test/recipe_loading/local-recipe-additional-profiles-for-all-platforms/: config.yml
test/recipe_loading/local-recipe-build-types-zlib-profile/: config.yml
test/recipe_loading/local-recipe-complex/: config.yml
test/recipe_loading/local-recipe-multi-folders/: config.yml
test/recipe_loading/local-recipe-one-version/: config.yml
(+13 files in other folders)
