[metadata]
name = ccdc_index_tools
version = 0.0.1

[options]
packages = ccdc_conan_index_tools

python_requires = >=3.7

install_requires =
    pyyaml
    conan_package_tools
    anyio
    asyncclick

[options.entry_points]
console_scripts =
        cit = ccdc_conan_index_tools.main:main

[options.extras_require]
testing =
    pytest
    pytest_cov
    pytest-asyncio
    mock
    black
    yamllint